Fix text block visibility

--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -34,7 +34,7 @@
     }
 
     .textBlock {
-        max-height: 200px;
+        max-height: 210px;
         overflow-y: hidden;
     }
 }
